--- a/src/app/organization/payment-types/payment-types.component.html
+++ b/src/app/organization/payment-types/payment-types.component.html
@@ -2,7 +2,7 @@
 
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_PAYMENTTYPE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Payment Type
+    {{'Organization.PaymentTypes.btnCreatePaymentType'| translate }}
   </button>
 
 </div>
@@ -11,7 +11,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Organization.PaymentTypes.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -21,17 +21,17 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.PaymentTypes.Name'| translate }} </th>
         <td mat-cell *matCellDef="let paymentType"> {{ paymentType.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.PaymentTypes.Description'| translate }} </th>
         <td mat-cell *matCellDef="let paymentType"> {{ paymentType.description }} </td>
       </ng-container>
 
       <ng-container matColumnDef="isCashPayment">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cash Payment </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.PaymentTypes.isCashPayment'| translate }} </th>
         <td mat-cell *matCellDef="let paymentType">
           <div [className]="paymentType.isCashPayment === true ? 'true' : 'false'">
             <fa-icon *ngIf="paymentType.isCashPayment" icon="check-circle" size="lg" matTooltip="Yes" matTooltipPosition="right"></fa-icon>
@@ -41,18 +41,18 @@
       </ng-container>
 
       <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Position </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.PaymentTypes.Position'| translate }} </th>
         <td mat-cell *matCellDef="let paymentType"> {{ paymentType.position }} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{'Organization.PaymentTypes.Actions'| translate }} </th>
         <td mat-cell *matCellDef="let paymentType">
           <button mat-button [routerLink]="[paymentType.id, 'edit']" color="primary">
-            <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;Edit
+            <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.Edit" | translate }}
           </button>
           <button mat-button (click)="deletePaymentType(paymentType.id)" color="warn">
-            <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;Delete
+            <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;{{ "ShareButton.DeleteEng" | translate }}
           </button>
         </td>
       </ng-container>
