--- a/src/app/organization/tellers/cashiers/cashiers.component.html
+++ b/src/app/organization/tellers/cashiers/cashiers.component.html
@@ -2,7 +2,7 @@
 
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_CASHIERS_FOR_TELLER'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    New Cashier
+    {{'Organization.Tellers.Cashiers.btnNewCashier'| translate }}
   </button>
 
 </div>
@@ -11,7 +11,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'Organization.Tellers.Cashiers.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -21,35 +21,35 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="period">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Period </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Period'| translate }} </th>
         <td mat-cell *matCellDef="let cashier"> {{ cashier.startDate | date }} - {{ cashier.endDate | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="staffName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cashier/Staff </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.staffName'| translate }} </th>
         <td mat-cell *matCellDef="let cashier"> {{ cashier.staffName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="isFullDay">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Day/Time </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.isFullDay'| translate }} </th>
         <td mat-cell *matCellDef="let cashier"> {{ cashier.isFullDay ? 'Yes' : 'No' }} </td>
       </ng-container>
 
       <ng-container matColumnDef="vaultActions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Vault Actions </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.vaultActions'| translate }} </th>
         <td mat-cell *matCellDef="let cashier">
-          <button class="cashier-action-button" mat-raised-button color="accent" matTooltip="Allocate Cash"
+          <button class="cashier-action-button" mat-raised-button color="accent" [matTooltip]="'Organization.Tellers.Cashiers.ToolTipAllocateCash'| translate"
             (click)="routeEdit($event)" [routerLink]="[cashier.id, 'allocate']" *midasHasPermission="'ALLOCATECASHIER_TELLER'">
             <i class="fa fa-arrow-up"></i>
           </button>
-          <button class="cashier-action-button" mat-raised-button color="warn" matTooltip="Settle Cash"
+          <button class="cashier-action-button" mat-raised-button color="warn" [matTooltip]="'Organization.Tellers.Cashiers.ToolTipSettleCash'| translate"
             (click)="routeEdit($event)" [routerLink]="[cashier.id, 'settle']" *midasHasPermission="'SETTLECASHIER_TELLER'">
             <i class="fa fa-arrow-down"></i>
           </button>
-          <button class="cashier-action-button" mat-raised-button color="primary" matTooltip="View Transactions"
+          <button class="cashier-action-button" mat-raised-button color="primary" [matTooltip]="'Organization.Tellers.Cashiers.ToolTipViewTransactions'| translate"
             (click)="routeEdit($event)" [routerLink]="[cashier.id, 'transactions']" *midasHasPermission="'ALLOCATECASHIER_TELLER'">
             <i class="fa fa-eye"></i>
-          </button>   
+          </button>
         </td>
       </ng-container>
 
