--- a/src/app/organization/tellers/cashiers/transactions/transactions.component.html
+++ b/src/app/organization/tellers/cashiers/transactions/transactions.component.html
@@ -1,11 +1,11 @@
 <div fxLayout="row" fxLayoutGap="1%" fxLayoutAlign="end" class="container m-b-20">
   <button mat-raised-button color="accent" [routerLink]="['../allocate']" *midasHasPermission="'ALLOCATECASHIER_TELLER'">
       <fa-icon icon="arrow-up"></fa-icon>&nbsp;&nbsp;
-      Allocate Cash
+      {{'Organization.Tellers.Cashiers.Transactions.btnAllocateCash'| translate }}
   </button>
   <button mat-raised-button color="warn" [routerLink]="['../settle']" *midasHasPermission="'SETTLECASHFROMCASHIER_TELLER'">
       <fa-icon icon="arrow-down"></fa-icon>&nbsp;&nbsp;
-      Settle Cash
+      {{'Organization.Tellers.Cashiers.Transactions.btnSettleCash'| translate }}
   </button>
 </div>
 
@@ -18,7 +18,7 @@
         <div fxLayout="row wrap" class="content">
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Branch
+            {{'Organization.Tellers.Cashiers.Transactions.Branch'| translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -26,7 +26,7 @@
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Teller
+            {{'Organization.Tellers.Cashiers.Transactions.Teller'| translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -34,7 +34,7 @@
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Cashier
+            {{'Organization.Tellers.Cashiers.Transactions.Cashier'| translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -42,7 +42,7 @@
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%" class="header">
-            Net Cash
+            {{'Organization.Tellers.Cashiers.Transactions.netCash'| translate }}
           </div>
 
           <div fxFlex="25%" fxFlex.lt-md="50%">
@@ -64,12 +64,12 @@
     <div fxLayout="row" fxLayoutGap="2%">
 
       <mat-form-field fxFlex>
-        <mat-label>Filter</mat-label>
+        <mat-label>{{'Organization.Tellers.Cashiers.Transactions.Filter'| translate }}</mat-label>
         <input matInput (keyup)="applyFilter($event.target.value)">
       </mat-form-field>
-  
+
       <mat-form-field>
-        <mat-label> Select Currency </mat-label>
+        <mat-label> {{'Organization.Tellers.Cashiers.Transactions.currency'| translate }} </mat-label>
         <mat-select [formControl]="currencySelector" required>
           <mat-option *ngFor="let currency of currencyData" [value]="currency.code">
             {{ currency.name }}
@@ -84,44 +84,44 @@
       <table class="mat-elevation-z1" mat-table [dataSource]="dataSource" matSort>
 
         <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Transactions.Date'| translate }} </th>
           <td mat-cell *matCellDef="let transaction"> {{ transaction.txnDate | date }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="transactions">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Transactions </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Transactions.Transactions'| translate }} </th>
           <td mat-cell *matCellDef="let transaction"> {{ transaction.txnType.value }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="allocation">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Allocation ({{cashierData.sumCashAllocation | number}}) </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Transactions.Allocation'| translate }} ({{cashierData.sumCashAllocation | number}}) </th>
           <td mat-cell *matCellDef="let transaction"> {{ transaction.txnType.value === "Allocate Cash" ? (transaction.txnAmount | number) : '-' }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="cashIn">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Cash In ({{cashierData.sumInwardCash | number}})  </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Transactions.sumInwardCash'| translate }} ({{cashierData.sumInwardCash | number}})  </th>
           <td mat-cell *matCellDef="let transaction"> {{ transaction.txnType.value === "Cash In" ? (transaction.txnAmount | number) : '-' }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="cashOut">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Cash Out ({{cashierData.sumOutwardCash | number}}) </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Transactions.sumOutwardCash'| translate }} ({{cashierData.sumOutwardCash | number}}) </th>
           <td mat-cell *matCellDef="let transaction"> {{ transaction.txnType.value === "Cash Out" ? (transaction.txnAmount | number) : '-' }} </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="settlement">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Settlement ({{cashierData.sumCashSettlement | number}})</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'Organization.Tellers.Cashiers.Transactions.Settlement'| translate }} ({{cashierData.sumCashSettlement | number}})</th>
           <td mat-cell *matCellDef="let transaction"> {{ transaction.txnType.value === "Settle Cash" ? (transaction.txnAmount | number) : '-' }} </td>
         </ng-container>
-  
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="select-row" [routerLink]="[row.id]"></tr>
-  
+
       </table>
-  
-      <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>  
+
+      <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
 
     </div>
-    
+
   </mat-card>
 
 </div>
