--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -291,13 +291,13 @@
 
             <mat-form-field fxFlex.gt-sm="15%">
               <mat-label> Số batch</mat-label>
-              <input matInput formControlName="batchNo" />
+              <input type="number" matInput formControlName="batchNo" />
               <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
 
             <mat-form-field fxFlex.gt-sm="15%">
               <mat-label> Số trace</mat-label>
-              <input matInput formControlName="traceNo" />
+              <input type="number" matInput formControlName="traceNo" />
               <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
 
