fix traceNo, batchNo type to number

--- a/src/app/transactions/create-transaction/create-transaction.component.html
+++ b/src/app/transactions/create-transaction/create-transaction.component.html
@@ -317,7 +317,7 @@
 
             <mat-form-field fxFlex.gt-sm="15%" >
               <mat-label> Số batch</mat-label>
-              <input matInput formControlName="batchNo" />
+              <input type="number" matInput formControlName="batchNo" />
               <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
 
@@ -325,7 +325,7 @@
 
             <mat-form-field fxFlex.gt-sm="15%" >
               <mat-label> Số trace</mat-label>
-              <input matInput formControlName="traceNo" />
+              <input type="number" matInput formControlName="traceNo" />
               <mat-error> Thông tin bắt buộc nhập! </mat-error>
             </mat-form-field>
 
